# osci-render

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  IMAGE_LICENSE.md  LICENSE  README.md  TRADEMARKS.md  _codeql_detected_source_root  bump_version  bump_version.cmd  debug_settings.py  luajit_linux.sh  luajit_linux_macos.sh  luajit_win.bat  osci-bitcrush.jucer  osci-installer.jucer  osci-render-midi.jucer  osci-render-test.jucer  osci-render.jucer  pom.xml  push_version  push_version.cmd  run_sanitizers.sh  run_tests.sh  sosci.jucer
.github/: FUNDING.yml  (+1 more)
Source/mathter/: CMakeLists.txt  Geometry.hpp  IoStream.hpp  LICENCE.md  Mathter.natvis  Matrix.hpp  Quaternion.hpp  Utility.hpp  Vector.hpp
Source/mathter/Common/: Approx.hpp  Definitions.hpp  DeterministicInitializer.hpp  MathUtil.hpp  Range.hpp  Traits.hpp
Source/mathter/Decompositions/: DecomposeLU.hpp  DecomposeQR.hpp  DecomposeSVD.hpp
Source/mathter/Matrix/: MatrixArithmetic.hpp  MatrixCast.hpp  MatrixCompare.hpp  MatrixFunction.hpp  MatrixImpl.hpp  MatrixVectorArithmetic.hpp
Source/mathter/Quaternion/: QuaternionArithmetic.hpp  QuaternionCompare.hpp  QuaternionFunction.hpp  QuaternionImpl.hpp  QuaternionLiterals.hpp  QuaternionVectorArithmetic.hpp
Source/mathter/Swizzle/: Swizzle_1.inc.hpp  Swizzle_2.inc.hpp  Swizzle_3.inc.hpp  Swizzle_4.inc.hpp
Source/mathter/Transforms/: IdentityBuilder.hpp  OrthographicBuilder.hpp  PerspectiveBuilder.hpp  Rotation2DBuilder.hpp  Rotation3DBuilder.hpp  ScaleBuilder.hpp  ShearBuilder.hpp  TranslationBuilder.hpp  ViewBuilder.hpp  ZeroBuilder.hpp
ci/: build.sh  (+16 more)
(+894 files in other folders)
